# specflow8

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DECISIONS.md  DOMAIN.md  PLAN.md  README.md  REVIEW.md  STATE.md  TASKS.md  pyproject.toml  specflow8.yaml
.github/: PULL_REQUEST_TEMPLATE.md
src/specflow8/: __init__.py  cli.py  config.py  constants.py  git_trace.py  io_markdown.py  models.py  profiles.py  rule_engine.py  rule_schema.py  validators.py  workflow.py
src/specflow8/commands/: analyze_cmd.py  check_cmd.py  checklist_cmd.py  commit_cmd.py  constitution_cmd.py  decide_cmd.py  handoff_cmd.py  implement_cmd.py  init_cmd.py  plan_cmd.py  profile_cmd.py  specify_cmd.py  state_cmd.py  tasks_cmd.py  todo_cmd.py
src/specflow8/rules/: boundary_rules.yaml  consistency_rules.yaml  quality_gates.yaml
src/specflow8/scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh
src/specflow8/scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1
src/specflow8/templates/checklists/: ops.md.j2  readiness.md.j2  requirements.md.j2
src/specflow8/templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md
src/specflow8/templates/core/: AGENTS.md.j2  ARCHITECTURE.md.j2  DECISIONS.md.j2  DOMAIN.md.j2  PLAN.md.j2  (+4 more)
tests/golden/: test_feature_block_golden.py
tests/integration/: test_cli_flow.py  test_profile_flow.py
tests/unit/: test_config.py  test_io_markdown.py  test_profiles.py  test_rule_schema.py  test_validators.py  test_workflow.py
(+3 files in other folders)
